--- a/Inversion.Razor/Inversion.Razor.csproj
+++ b/Inversion.Razor/Inversion.Razor.csproj
@@ -9,8 +9,9 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Inversion.Razor</RootNamespace>
     <AssemblyName>Inversion.Razor</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -30,15 +31,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Inversion">
-      <HintPath>..\lib\Inversion\Inversion.dll</HintPath>
-    </Reference>
-    <Reference Include="Inversion.Process">
-      <HintPath>..\lib\Inversion\Inversion.Process.dll</HintPath>
-    </Reference>
-    <Reference Include="Inversion.Web">
-      <HintPath>..\lib\Inversion\Inversion.Web.dll</HintPath>
-    </Reference>
     <Reference Include="RazorEngine">
       <HintPath>..\packages\RazorEngine.3.7.0\lib\net45\RazorEngine.dll</HintPath>
     </Reference>
@@ -68,6 +60,20 @@
   <ItemGroup>
     <None Include="app.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\submodules\inversion\Inversion.Process\Inversion.Process.csproj">
+      <Project>{37f59768-76ea-4d09-8976-bbc3540db5ae}</Project>
+      <Name>Inversion.Process</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\submodules\inversion\Inversion.Web\Inversion.Web.csproj">
+      <Project>{6951ba6b-4388-4fc8-8298-60da7563fee4}</Project>
+      <Name>Inversion.Web</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\submodules\inversion\Inversion\Inversion.csproj">
+      <Project>{a2dbf0b8-b672-4237-8a0b-864bb0474054}</Project>
+      <Name>Inversion</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
